--- a/stratum/config/cryptovantaa.conf
+++ b/stratum/config/cryptovantaa.conf
@@ -1,13 +1,13 @@
 [TCP]
 server = pool.iote.one
 port = 3113
-password = WoKVCSjZW7zD0IVldogv8eGGvMzPz26J
+password = tu8tu5
 
 [SQL]
 host = localhost
 database = yiimpfrontend
 username = stratum
-password = PekYBwASJ69BvoG9Sr0mMkL61zS1cP1g
+password = patofpaq
 
 [STRATUM]
 algo = CryptoVantaa
